style: fixed stuff on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,9 @@
   margin: 0;
   padding: 0;
 }
+a {
+    font-weight: bold;
+}
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -22,7 +25,7 @@ h1 {
 }
 
 .logo {
-  max-width: 25%;
+  max-width: 35%;
   height: auto;
   padding: 2rem;
 }
@@ -33,7 +36,7 @@ h1 {
   margin-right: 1rem;
   border: 1px solid hsl(322, 100%, 66%);
   text-decoration: none;
-  padding: 0.3rem 1.5rem;
+  padding: 0.3rem 1.3rem;
   font-family: "Open Sans", sans-serif;
 }
 
@@ -104,7 +107,7 @@ h1 {
     content: url(/images/icon-messages.png);
     display: block;
     position: relative;
-    top: 1.5rem;
+    top: 2rem;
     right: 6rem;
   }
   p {
@@ -115,7 +118,7 @@ h1 {
 .grow-img {
   display: flex;
   justify-content: center;
-  margin-top: 20rem;
+  margin-top: 12rem;
 
   img {
     max-width: 85%;
@@ -124,7 +127,7 @@ h1 {
 }
 .growtext {
   text-align: center;
-  margin: 6rem 1rem;
+  margin: 3rem 1rem;
 
   p {
     font-size: 1.1rem;
@@ -135,7 +138,7 @@ h1 {
 .flow-img-container {
   display: flex;
   justify-content: center;
-  margin-top: 23rem;
+  margin-top: 12rem;
 
   img {
     max-width: 85%;
@@ -145,7 +148,7 @@ h1 {
 
 .flowtext {
   text-align: center;
-  margin: 6rem 1rem;
+  margin: 3rem 1rem;
   p {
     margin-top: 1rem;
   }
@@ -154,7 +157,7 @@ h1 {
 .users-img-container {
   display: flex;
   justify-content: center;
-  margin-top: 18rem;
+  margin-top: 12rem;
 
   img {
     max-width: 85%;
@@ -164,7 +167,7 @@ h1 {
 
 .userstext {
   text-align: center;
-  margin: 6rem 1rem;
+  margin: 3rem 1rem;
 }
 p {
   margin-top: 1rem;
@@ -178,9 +181,6 @@ p {
   h1 {
     text-align: center;
   }
-  span {
-    margin-left: 1.4rem;
-  }
 
   a {
     margin-top: 1.7rem;
@@ -193,6 +193,9 @@ p {
   position: absolute;
   padding-top: 0.5rem;
   margin-bottom: 1rem;
+  max-width: 100%;
+  height: auto;
+  background-position: 5rem;
 }
 footer {
   color: hsl(207, 100%, 98%);
@@ -213,7 +216,7 @@ footer {
   display: flex;
   flex-direction: column;
   position: relative;
-  top: 10rem;
+  top: 7rem;
 
   h2 {
     text-transform: uppercase;
@@ -236,8 +239,8 @@ footer {
 }
 
 .newsletter-btn {
-  padding: 0.7rem 2.2rem;
-  margin-left: 12rem;
+  padding: 0.7rem 3rem;
+  margin-left: 10rem;
   color: hsl(207, 100%, 98%);
   background: hsl(322, 100%, 66%);
   text-decoration: none;
@@ -286,12 +289,12 @@ footer {
 .social-icons {
   display: flex;
   justify-content: flex-start;
-  gap: 1rem;
+  gap: 1.5rem;
   margin-left: 2.3rem;
   margin-bottom: 1rem;
 
   a {
-      color:hsl(207, 100%, 98%);
-      font-size: 1.5rem;
+    color: hsl(207, 100%, 98%);
+    font-size: 1.5rem;
   }
 }
